--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=develop
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.datasource.url=jdbc:sqlite:mcrb.db
+spring.datasource.driver-class:org.sqlite.JDBC
+spring.jpa.database-platform=xyz.blapco.bl.mcrb.configuration.SQLiteDialect
