Add column names and context path.
Add Column names on Publication Entity and
set tomcat's context path to '/mcrb' instead of '/'.

--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -3,4 +3,4 @@ spring.datasource.driver-class:org.sqlite.JDBC
 spring.jpa.database-platform=xyz.blapco.bl.mcrb.configuration.SQLiteDialect
 
 server.address=0.0.0.0
-server.port=8080
+server.servlet.context-path=/mcrb
