--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:sqlite:mcrb.db
 spring.datasource.driver-class:org.sqlite.JDBC
 spring.jpa.database-platform=xyz.blapco.bl.mcrb.configuration.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
 
 server.address=0.0.0.0
 server.servlet.context-path=/mcrb
