Move from bl.blapco.xyz to blapco.xyz
Initially, mcrb was supposed to be a personal project, so, it
would be published to bl.blapco.xyz, git.blapco.xyz/Personal/mcrb.
I've decided to publish it as a blapco project, and not a personal project.

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>xyz.blapco.bl</groupId>
+	<groupId>xyz.blapco</groupId>
 	<artifactId>mcrb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mcrb</name>
-	<description>Micro Blog.</description>
+	<description>Self-hosted microblog.</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
