Authentication is shitty but it works.
Instead of storing the username and the password on a database.
The user provides its username and its password as arguments
when running the application.

Both of them can be changed at runtime, for example:

--username=test --password=test123 --role=USER

--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlite:mcrb.db
 spring.datasource.driver-class:org.sqlite.JDBC
-spring.jpa.database-platform=xyz.blapco.mcrb.configuration.SQLiteDialect
+spring.jpa.database-platform=xyz.blapco.mcrb.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.address=0.0.0.0
