Move back from blapco project to personal project

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>xyz.blapco</groupId>
+	<groupId>xyz.blapco.bl</groupId>
 	<artifactId>mcrb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mcrb</name>
